<resources>
    <string name="app_name">Management App Task</string>
    <string name="add_user">Add User</string>
    <string name="no_data_placeholder">No Details</string>
    <string name="name">Name</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="enter_name">Enter Name</string>
    <string name="phone_number">Mobile Number</string>
    <string name="enter_phone_number">Enter Mobile Number</string>
    <string name="create_account">Create Account</string>
    <string name="user_role">User Role</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="registration">Registration</string>
    <string name="already_have_a_account">Already have a account? </string>
    <string name="user_creation_detail">User Creation Detail</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="add">Add</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="admin_home_page">Admin Home Page</string>
    <string name="user_home_page">User Home Page</string>
    <string name="task_count">Tasks Count: 0</string>
    <string name="enter_task_title">Enter Task Title</string>
    <string name="user_name">User Name</string>
    <string name="priority">Priority</string>
    <string name="task_tittle">Task Title</string>
    <string name="tasks">Tasks</string>
    <string name="task_description">Task Description</string>
    <string name="task_created_date">Task Created Date</string>
    <string name="start">Start</string>
    <string name="due_date">Due Date</string>
    <string name="log_out">LogOut</string>
    <string name="task_name">Task Name</string>
    <string name="created_date">Create Date</string>
    <string name="todo">Todo</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="enter_task">Enter task</string>
    <string name="close">Close</string>
    <string name="add_task">Add Task</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="click_to_select_date">Select date</string>
    <string name="update_task_status">Update Task Status</string>
    <string name="status">Status:</string>
    <string name="date">Date</string>
    <string name="value">Value</string>
    <string name="due_datee">Due Date:</string>
    <string name="task_namee">Task Name:</string>
    <string name="create_date">Created Date:</string>
    <string name="logout">Logout</string>
    <string name="all">All</string>


    <string-array name="status_array">
        <item>Todo</item>
        <item>In Progress</item>
        <item>Completed</item>
    </string-array>


</resources>

